# vanmon

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/providers/: ThemeProvider.tsx
main/: CMakeLists.txt  Kconfig.projbuild  i2c.c  i2c.h  main.c  server.c  server.h  wifi.c  wifi.h
